# napi

./: .gitignore  Cargo.toml  README.md  TODO  TODO.md
data/: ungetable.json
derive_macro/: Cargo.toml
derive_macro/src/: lib.rs
src/: doujin.rs  doujishi.rs  gallery.rs  lib.rs  macros.rs  search.rs  search_args.rs  serde_utils.rs  string_utils.rs  table.rs  tag.rs
src/data/: ungetable.json
src/search/: range.rs  search_args.rs  time_range.rs
