[package]
name = "happi"
version = "0.1.0"
authors = ["Tatounee <oettam32@gmail.com>"]
edition = "2018"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.10.8", features = ["blocking"]}
serde = {version = "1.0.115", features = ["derive"]}
serde_json = "1.0.57"
rayon = "1.4.0"
chrono = "0.4.19"

