[package]
name = "derive_macro"
version = "0.1.0"
authors = ["T4toun3 <oettam32@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0.41"
quote = "1.0.7"
proc-macro2 = "1.0.21"